fix: removed jump from navbar

--- a/portal/static/portal/sass/bootstrap/_forms.scss
+++ b/portal/static/portal/sass/bootstrap/_forms.scss
@@ -33,9 +33,14 @@ label {
   display: inline-block;
   max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
   margin-bottom: 5px;
-  // font-weight: 700;
+  font-weight: 700;
 }
 
+form {
+  > label {
+  font-weight: 100;
+  }
+}
 
 // Normalize form controls
 //
